make code java8 compatible, introduce more functional tests and fix external enum compatibility